--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,38 +1,18 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-.yarn/install-state.gz
+pkg/
 
-# testing
-/coverage
+# Test binary, build with `go test -c`
+*.test
 
-# next.js
-/.next/
-/out/
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
 
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
-.env*.local
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-
-.history
+# IDE
+.idea/
+.vscode/
